--- a/iaexpert_python_fundamentals.ipynb
+++ b/iaexpert_python_fundamentals.ipynb
@@ -985,7 +985,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XDQN12kiE16P",
-        "outputId": "6ed89e27-5c1a-4cd9-93dd-b750688c8eca"
+        "outputId": "12988749-2a61-4945-d407-9d9cc876c5e3"
       },
       "source": [
         "numero1 = int(input('Digite um número:'))\r\n",
@@ -993,19 +993,19 @@
         "print('adição dos dois números:', numero1 + numero2)\r\n",
         "print('subtração dos dois números:', numero1 - numero2)\r\n",
         "print('multiplicação dos dois números:', numero1 * numero2)\r\n",
-        "print('divisão dos dois números:', numero1 / numero2)"
+        "print('divisão dos dois números:', round(numero1 / numero2, 2))"
       ],
-      "execution_count": 37,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Digite um número:9\n",
             "Digite um número:5\n",
-            "adição dos dois números: 14\n",
-            "subtração dos dois números: 4\n",
-            "multiplicação dos dois números: 45\n",
-            "divisão dos dois números: 1.8\n"
+            "Digite um número:3\n",
+            "adição dos dois números: 8\n",
+            "subtração dos dois números: 2\n",
+            "multiplicação dos dois números: 15\n",
+            "divisão dos dois números: 1.67\n"
           ],
           "name": "stdout"
         }
@@ -1023,7 +1023,504 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6DWK5j2ZD-om"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6DWK5j2ZD-om",
+        "outputId": "d8962261-c702-4f96-c81f-912c0106d0b9"
+      },
+      "source": [
+        "consumo = 12\r\n",
+        "tempo_viagem = float(input('Digite o tempo de viagem: '))\r\n",
+        "velocidade = float(input('Digite a velocidade média: '))\r\n",
+        "distancia_percorrida = tempo_viagem * velocidade\r\n",
+        "consumo_total = round(distancia_percorrida / consumo, 2)\r\n",
+        "print(f'A velocidade média foi de {velocidade}km/h, o tempo gasto foi de {tempo_viagem} horas, a distancia total percorrida foi de {distancia_percorrida} km e o consumo total foi de {consumo_total} litros.')"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Digite o tempo de viagem: 3.5\n",
+            "Digite a velocidade média: 80\n",
+            "A velocidade média foi de 80.0km/h, o tempo gasto foi de 3.5 horas, a distancia total percorrida foi de 280.0 km e o consumo total foi de 23.33 litros.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sVavrR7sRpYO"
+      },
+      "source": [
+        "# Aula 4. Operadores lógicos e relacionais"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XdPPv-Z6R3Ei"
+      },
+      "source": [
+        "## 4.1 Operadores lógicos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SbnvV0GARvGN",
+        "outputId": "2afd451b-5e74-4a20-c762-c31753168975"
+      },
+      "source": [
+        "a = True\r\n",
+        "b = False\r\n",
+        "print(a, b)"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pLPY2NL3SM18",
+        "outputId": "34fd6312-6f8d-4168-ede0-9c0c8093b508"
+      },
+      "source": [
+        "a and b"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hc3VUkMySMj3",
+        "outputId": "18b273df-bec4-4da9-a6ad-eb2bb67a5d42"
+      },
+      "source": [
+        "a & b"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UdAYVE62SY-n",
+        "outputId": "1168382d-02b5-402b-c4ab-b69679946575"
+      },
+      "source": [
+        "c = a and b\r\n",
+        "print('A e B são iguais é:', c) # para usar aspas dentro da string, usar aspas duplas por fora e dentro simples: \"'A' e 'B' são iguais é\""
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "A e B são iguais é: False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8AcQBmCOTF1Z",
+        "outputId": "c74599c5-ba10-46ab-ca2b-c94fe7abeef8"
+      },
+      "source": [
+        "a or b"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ik6TdaG0TFoy",
+        "outputId": "9070b895-c350-404c-c68c-cc83094f311a"
+      },
+      "source": [
+        "a | b"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nSUqvbw7TLU5",
+        "outputId": "bcc0e373-abe8-499c-dd87-f9dbd5a953fe"
+      },
+      "source": [
+        "d = a or b\r\n",
+        "print(\"'A' ou 'B' é igual a\", d)"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "'A' ou 'B' é igual a True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jZnONkLdTY2m",
+        "outputId": "a523d9a6-f5fc-4108-856f-0685ba09eb2f"
+      },
+      "source": [
+        "not a"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dlza3LrSTYsh",
+        "outputId": "28f01e63-05e8-47ac-ed30-663df090771f"
+      },
+      "source": [
+        "not b"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AZIb3g9bR86B"
+      },
+      "source": [
+        "## 4.2 Operadores relacionais"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qYzMd7NWSAC6",
+        "outputId": "4b7ce461-dfb9-4d00-f30c-36af9b01f999"
+      },
+      "source": [
+        "5 > 3"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WT2loC6sTwDJ",
+        "outputId": "f3369c8c-810c-45b6-ca54-4a32d7672ca3"
+      },
+      "source": [
+        "5 < 3"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ndaf0QYUTv-n",
+        "outputId": "7d5407a6-e766-4800-b031-f755e32d8b69"
+      },
+      "source": [
+        "5 >= 5"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a3-x9u2ATv6k",
+        "outputId": "e2dc6969-0291-444b-bb2b-af99566c284c"
+      },
+      "source": [
+        "5 <= 3"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J_Ro5BLgTv2t",
+        "outputId": "1c593e1d-9023-4a4e-c340-b628b60ac74b"
+      },
+      "source": [
+        "5 == 3"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s4UV3vQqTvyQ",
+        "outputId": "95cb8cce-1b52-4038-bde6-e9194402c050"
+      },
+      "source": [
+        "5 != 3"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uI6xc4D3UFi_"
+      },
+      "source": [
+        "## 4.3 Operadores condicionais"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CMfzpu60Tvt1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C3e2mCRpTvnF"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p-CIpoUSTvfz"
       },
       "source": [
         ""
