--- a/iaexpert_python_fundamentals.ipynb
+++ b/iaexpert_python_fundamentals.ipynb
@@ -1492,13 +1492,279 @@
         "id": "uI6xc4D3UFi_"
       },
       "source": [
-        "## 4.3 Operadores condicionais"
+        "## 4.3 Operadores condicionais - if, else"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CMfzpu60Tvt1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CMfzpu60Tvt1",
+        "outputId": "312d43e0-fbe8-4d57-861e-1173dad9c93b"
+      },
+      "source": [
+        "if 5 > 3:\r\n",
+        "  print('5 é maior que 3')"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5 é maior que 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6eWtJ2-LVF3F",
+        "outputId": "982b97a2-6986-4c5d-90ee-fb42cbff8e8d"
+      },
+      "source": [
+        "# 2 condições:\r\n",
+        "if 5 > 6:\r\n",
+        "  print('5 é maior')\r\n",
+        "else:\r\n",
+        "  print('5 não é maior')"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5 não é maior\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C3e2mCRpTvnF",
+        "outputId": "beb1dbf8-9a7e-497e-afd4-42daf59e5a9c"
+      },
+      "source": [
+        "# mais de 2 condições:\r\n",
+        "n = 9\r\n",
+        "if n == 4:\r\n",
+        "  print('n é igual a 4')\r\n",
+        "else:\r\n",
+        "  if n == 3:\r\n",
+        "    print('n é igual a 3')\r\n",
+        "  else:\r\n",
+        "    print('n não é igual a 4 nem 3')"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "n não é igual a 4 nem 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p-CIpoUSTvfz",
+        "outputId": "2ce8988d-30e4-49a3-8d56-6cde41dae625"
+      },
+      "source": [
+        "x = 4\r\n",
+        "y = 3\r\n",
+        "if (x > 1) and (y % 2 == 0):\r\n",
+        "  print('x é maior que 2 e y é par.')\r\n",
+        "else:\r\n",
+        "  print('Uma apenas ou nenhuma das condições foram satisfeitas.')"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Uma apenas ou nenhuma das condições foram satisfeitas.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CLSlb0IHWo4-"
+      },
+      "source": [
+        "#### **Exercicios de fixação**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q8SgsDfLWr1F"
+      },
+      "source": [
+        "1. Leia a idade do usuário e classifique-o em:\r\n",
+        "* Criança – 0 a 12 anos\r\n",
+        "* Adolescente – 13 a 17 anos\r\n",
+        "* Adulto – acima de 18 anos\r\n",
+        "* Se o usuário digitar um número negativo, mostrar a mensagem que a idade é inválida."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b97SyIAWXAry",
+        "outputId": "c58af67c-1562-4846-9c85-dae4f9a6e5dd"
+      },
+      "source": [
+        "idade = int(input('Digite sua idade: '))\r\n",
+        "if (idade <= 12):\r\n",
+        "  print(f'Sua idade é {idade}, portanto, Criança.')\r\n",
+        "elif (idade >= 13 and idade <= 18):\r\n",
+        "  print(f'Sua idade é {idade}, portanto, Adolescente.')\r\n",
+        "elif (idade > 18):\r\n",
+        "  print(f'Sua idade é {idade}, portanto, Adulto.')\r\n",
+        "else:\r\n",
+        "  print('Idade inválida. Digite novamente.')"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Digite sua idade: 88\n",
+            "Sua idade é 88, portanto, Adulto.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MU5Or89iXBXe"
+      },
+      "source": [
+        "2. Calcular a média de um aluno que cursou a disciplina de Programação I, a partir da leitura das notas M1, M2 e M3; passando por um cálculo da média aritmética. Após a média calculada, devemos anunciar se o aluno foi aprovado, reprovado ou pegou exame:\r\n",
+        "* Se a média estiver entre 0.0 e 4.0, o aluno está reprovado\r\n",
+        "* Se a média estiver entre 4.1 e 6.0, o aluno pegou exame\r\n",
+        "* Se a média for maior do que 6.0, o aluno está aprovado\r\n",
+        "* Se o aluno pegou exame, deve ser lida a nota do exame. Se a nota do exame for maior do que 6.0, está aprovado, senão; está reprovado."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LaRjy0ChW7aO",
+        "outputId": "8e8acb8e-d472-4a62-b676-02bf8a7d4aa9"
+      },
+      "source": [
+        "m1 = float(input('Digite a primeira nota: '))\r\n",
+        "m2 = float(input('Digite a segunda nota: '))\r\n",
+        "m3 = float(input('Digite a terceira nota: '))\r\n",
+        "media = (m1 + m2 + m3)/3\r\n",
+        "print('Sua média é', round(media, 2))\r\n",
+        "if (media <= 4.0):\r\n",
+        "  print('Você reprovou!')\r\n",
+        "elif (media >= 4.1 and media <= 6.0):\r\n",
+        "  print('Você pegou exame!')\r\n",
+        "  exame = float(input('Digite a nota do seu exame: '))\r\n",
+        "  if (exame > 6.0):\r\n",
+        "    print('Você está aprovado no exame!')\r\n",
+        "  else:\r\n",
+        "    print('Você reprovou no exame!')\r\n",
+        "elif (media > 6.0):\r\n",
+        "  print('Você está aprovado!')"
+      ],
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Digite a primeira nota: 5\n",
+            "Digite a segunda nota: 6\n",
+            "Digite a terceira nota: 4\n",
+            "Sua média é 5.0\n",
+            "Você pegou exame!\n",
+            "Digite a nota do seu exame: 5\n",
+            "Você reprovou no exame!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lg2dJZt7dEvK"
+      },
+      "source": [
+        "# Aula 5. Estruturas de repetição"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AKJyPbxZdMYn"
+      },
+      "source": [
+        "## 5.1 Estrutura de repetição - For"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fbck73-ramxx",
+        "outputId": "f09c04df-2754-45cb-e20e-931df12993df"
+      },
+      "source": [
+        "for numero in range(1,5): #imprime de 1 a 4, o ultimo numero não imprime!\r\n",
+        "  print(numero)"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t0jw6x7UdVpM"
       },
       "source": [
         ""
@@ -1509,7 +1775,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C3e2mCRpTvnF"
+        "id": "48b4B9kKdVf3"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "82OrHjzrdWPu"
+      },
+      "source": [
+        "## 5.2 Estrutura de repetição - While"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-dbaUwFPdYx7"
       },
       "source": [
         ""
@@ -1520,7 +1806,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p-CIpoUSTvfz"
+        "id": "tSruQ95udY-H"
       },
       "source": [
         ""
