--- a/iaexpert_python_fundamentals.ipynb
+++ b/iaexpert_python_fundamentals.ipynb
@@ -1764,24 +1764,155 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t0jw6x7UdVpM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t0jw6x7UdVpM",
+        "outputId": "eb84a554-dc2d-4fb1-e628-a95906a62c55"
       },
       "source": [
-        ""
+        "for numero in range(5, 0, -1): # o terceiro parametro é o step, de quantos em quantos\r\n",
+        "  print(numero)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "48b4B9kKdVf3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "48b4B9kKdVf3",
+        "outputId": "1e543d62-345c-4fd7-8a27-6be8ac3f348b"
       },
       "source": [
-        ""
+        "soma = 0\r\n",
+        "for numero in range (1, 6):\r\n",
+        "  soma = soma + numero\r\n",
+        "  print(soma)\r\n",
+        "print(soma)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "3\n",
+            "6\n",
+            "10\n",
+            "15\n",
+            "15\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hGb2kX5RhIx-",
+        "outputId": "5849c10b-b116-425f-d241-d44c32ab26aa"
+      },
+      "source": [
+        "# como utilizar o for para percorrer strings:\r\n",
+        "palavra = 'sorvete'\r\n",
+        "for letra in palavra:\r\n",
+        "  print(letra)\r\n",
+        "  if letra == 'v':\r\n",
+        "    print('Achou a letra v!')"
+      ],
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "s\n",
+            "o\n",
+            "r\n",
+            "v\n",
+            "Achou a letra v!\n",
+            "e\n",
+            "t\n",
+            "e\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ywnK0BBSho1I",
+        "outputId": "f3d355a4-889d-430b-919c-3e2eb90b07b1"
+      },
+      "source": [
+        "# como utilizar o for aninhado, excelente para percorrer matrizes\r\n",
+        "for i in range(0,5):\r\n",
+        "  print(i)\r\n",
+        "  print('---')\r\n",
+        "  for j in range (0,3): # para cada i impresso, ele vai imprimir 0, 1 e 2\r\n",
+        "    print(j)\r\n",
+        "  print()"
+      ],
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "---\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "\n",
+            "1\n",
+            "---\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "\n",
+            "2\n",
+            "---\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "\n",
+            "3\n",
+            "---\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "\n",
+            "4\n",
+            "---\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1795,24 +1926,238 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-dbaUwFPdYx7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RBCrGnGuicmj",
+        "outputId": "c703aaaa-0076-4167-b9ac-620b7ce04e13"
       },
       "source": [
-        ""
+        "# sempre que trabalhar com while precisa usar um break, senão vai ficar rodando até o final da memoria!\r\n",
+        "# SEMPRE definir uma variavel fora do while\r\n",
+        "numero = 1 \r\n",
+        "while numero < 6: # SEMPRE definir uma condição\r\n",
+        "  print(numero)\r\n",
+        "  numero += 1 # SEMPRE colocar um incremento para evitar o loop infinito!!!!!!!!!!!  \r\n",
+        "print('- - -')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "- - -\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tSruQ95udY-H"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-dbaUwFPdYx7",
+        "outputId": "fcdbfe3d-b4dc-45f7-8d29-3d9082ea59ba"
       },
       "source": [
-        ""
+        "# while invertido\r\n",
+        "numero = 5\r\n",
+        "while numero > 0:\r\n",
+        "  print(numero)\r\n",
+        "  numero -= 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bJJC6wV2q5GM",
+        "outputId": "03c21362-e0ee-4307-f6e6-5066e8630b82"
+      },
+      "source": [
+        "soma = 0\r\n",
+        "numero = 1\r\n",
+        "while numero < 6:\r\n",
+        "  soma += numero\r\n",
+        "  print(soma)\r\n",
+        "  numero += 1\r\n",
+        "  print(numero)\r\n",
+        "  ('...')\r\n",
+        "print(soma)"
+      ],
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "3\n",
+            "6\n",
+            "4\n",
+            "10\n",
+            "5\n",
+            "15\n",
+            "6\n",
+            "15\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tSruQ95udY-H",
+        "outputId": "e92da041-fa19-453a-9c40-41e2cd9c33ff"
+      },
+      "source": [
+        "# usando o while quando o usuario precisa digitar algum input\r\n",
+        "# semelhante a uma validação do input do usuario\r\n",
+        "numero = -1\r\n",
+        "while numero < 1 or numero > 10:\r\n",
+        "  numero = int(input('Digite um numerode 1 a 10: ')) # enquanto o usuario digitar qualquer numero fora do range, ele vai continuar executando...\r\n",
+        "# enquanto a condição for FALSA, ele continua executando o loop.\r\n",
+        "# quando a condição for VERDADEIRA, ele pára a execução"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Digite um numerode 1 a 10: 12\n",
+            "Digite um numerode 1 a 10: 7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Kq8m97FMvGF9"
+      },
+      "source": [
+        "#### **Exercicios de fixação**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "utZVXDbsvJfZ"
+      },
+      "source": [
+        "1. Ler 5 notas e informar a média."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qxIrr6RBvSY7",
+        "outputId": "430eed51-5cde-42b0-d9b1-7dd3562fec29"
+      },
+      "source": [
+        "soma_notas = 0\r\n",
+        "n_notas = 5\r\n",
+        "for nota in range(n_notas):\r\n",
+        "  soma_notas = float(input('Digite uma nota: ')) + soma_notas\r\n",
+        "  print(soma_notas)\r\n",
+        "media = soma_notas / n_notas\r\n",
+        "print(media)"
+      ],
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Digite uma nota: 9\n",
+            "9.0\n",
+            "Digite uma nota: 8\n",
+            "17.0\n",
+            "Digite uma nota: 5\n",
+            "22.0\n",
+            "Digite uma nota: 10\n",
+            "32.0\n",
+            "Digite uma nota: 8\n",
+            "40.0\n",
+            "8.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VX-FEJSqvPCH"
+      },
+      "source": [
+        "2. Imprimir a tabuada do número 3 (3 x 1 = 1 – 3 x 10 = 30)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YHTiOpaTwlJ5",
+        "outputId": "e8d914bf-0261-442d-9d15-a0d7bedf5f1f"
+      },
+      "source": [
+        "valor = 3\r\n",
+        "for numero in range (1, 11) :\r\n",
+        "  print(f'{valor} x {numero} = {valor * numero}')"
+      ],
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "3 x 4 = 12\n",
+            "3 x 5 = 15\n",
+            "3 x 6 = 18\n",
+            "3 x 7 = 21\n",
+            "3 x 8 = 24\n",
+            "3 x 9 = 27\n",
+            "3 x 10 = 30\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
