--- a/iaexpert_python_fundamentals.ipynb
+++ b/iaexpert_python_fundamentals.ipynb
@@ -2084,33 +2084,63 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qxIrr6RBvSY7",
-        "outputId": "430eed51-5cde-42b0-d9b1-7dd3562fec29"
+        "outputId": "43d17f2f-751c-4066-d1b2-8fd40841ce73"
       },
       "source": [
+        "# usando FOR:\r\n",
         "soma_notas = 0\r\n",
         "n_notas = 5\r\n",
-        "for nota in range(n_notas):\r\n",
+        "for _ in range(n_notas): # usa-se _ para substituir a definição de alguma variavel que não vai ser utilizada posteriormente, apenas para percorrer o FOR\r\n",
         "  soma_notas = float(input('Digite uma nota: ')) + soma_notas\r\n",
-        "  print(soma_notas)\r\n",
+        "  # print(soma_notas)\r\n",
         "media = soma_notas / n_notas\r\n",
-        "print(media)"
+        "print(f'A média é {media}.')"
       ],
-      "execution_count": 132,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Digite uma nota: 9\n",
-            "9.0\n",
             "Digite uma nota: 8\n",
-            "17.0\n",
-            "Digite uma nota: 5\n",
-            "22.0\n",
-            "Digite uma nota: 10\n",
-            "32.0\n",
-            "Digite uma nota: 8\n",
-            "40.0\n",
-            "8.0\n"
+            "Digite uma nota: 7\n",
+            "Digite uma nota: 6\n",
+            "Digite uma nota: 9\n",
+            "A média é 7.8.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uumqQ9JHzg8C",
+        "outputId": "8e8b2538-eee0-429e-e23d-4b0cabbac0f6"
+      },
+      "source": [
+        "# usando o WHILE:\r\n",
+        "numero = 1\r\n",
+        "while numero <= 5:\r\n",
+        "  nota = float(input(\"Digite a nota: \"))\r\n",
+        "  soma += nota\r\n",
+        "  numero += 1\r\n",
+        "print('A média é ', soma/5)"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Digite a nota: 9\n",
+            "Digite a nota: 8\n",
+            "Digite a nota: 7\n",
+            "Digite a nota: 6\n",
+            "Digite a nota: 5\n",
+            "A média é  15.6\n"
           ],
           "name": "stdout"
         }
@@ -2132,14 +2162,52 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YHTiOpaTwlJ5",
-        "outputId": "e8d914bf-0261-442d-9d15-a0d7bedf5f1f"
+        "outputId": "75d13f70-5f1e-483e-9c33-13931d39a9c1"
       },
       "source": [
-        "valor = 3\r\n",
-        "for numero in range (1, 11) :\r\n",
+        " # usando FOR:\r\n",
+        "valor = int(input('Digite um numero para ver a tabuada: '))\r\n",
+        "for numero in range (1, 11):\r\n",
         "  print(f'{valor} x {numero} = {valor * numero}')"
       ],
-      "execution_count": 134,
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Digite um numero para ver a tabuada: 8\n",
+            "8 x 1 = 8\n",
+            "8 x 2 = 16\n",
+            "8 x 3 = 24\n",
+            "8 x 4 = 32\n",
+            "8 x 5 = 40\n",
+            "8 x 6 = 48\n",
+            "8 x 7 = 56\n",
+            "8 x 8 = 64\n",
+            "8 x 9 = 72\n",
+            "8 x 10 = 80\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WFgYKbGb1yIa",
+        "outputId": "dfdf7732-e7c0-4b9e-b3be-d200fb5b0e6e"
+      },
+      "source": [
+        "# usando WHILE:\r\n",
+        "numero_tabuada = 1\r\n",
+        "while numero_tabuada <= 10:\r\n",
+        "  print('3 x {} = {}'.format(numero_tabuada, 3 * numero_tabuada))\r\n",
+        "  numero_tabuada += 1"
+      ],
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
@@ -2158,6 +2226,407 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GTZar3DX3TL-"
+      },
+      "source": [
+        "# Aula 6. Coleções"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6rVTA_nn3ZtL"
+      },
+      "source": [
+        "## 6.1 Tuplas - usa ( )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UdsAC13a3pnh",
+        "outputId": "55c2894c-61f2-4dac-a240-e5a5b82afdbe"
+      },
+      "source": [
+        "tupla = ('Homo sapiens', 'Canis familiaris', 'Felis catus')\r\n",
+        "tupla"
+      ],
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Homo sapiens', 'Canis familiaris', 'Felis catus')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 150
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "JieQyIQy341j",
+        "outputId": "3f8c668a-3011-45da-f47e-ffd193f94860"
+      },
+      "source": [
+        "# traz o conteudo na posição 1\r\n",
+        "tupla[1]"
+      ],
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Canis familiaris'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 153
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u1ek3vQ434qb",
+        "outputId": "e4bd79bf-609f-4cc3-e9d3-ea7ada0c0ba0"
+      },
+      "source": [
+        "# mostra em que posição está determinado item\r\n",
+        "tupla.index('Canis familiaris')"
+      ],
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 154
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0TXDd1GD4bsI",
+        "outputId": "f419d8d3-7ab7-4e86-c498-5585e1d9b407"
+      },
+      "source": [
+        "# verificar cada um dos elementos dentro da lista\r\n",
+        "for elemento in tupla:\r\n",
+        "  print(elemento)"
+      ],
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Homo sapiens\n",
+            "Canis familiaris\n",
+            "Felis catus\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K1fjU49y3Z42"
+      },
+      "source": [
+        "## 6.2 Listas - usa [ ] e permite armazenar mais valores"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AAGOiONl3qYf",
+        "outputId": "89c2bcce-ac72-482b-ac9d-9fbf600a0942"
+      },
+      "source": [
+        "lista_1 = ['Homo sapiens', 'Canis familiaris', 'Felis catus']\r\n",
+        "lista_2 = ['Xenopus laevis', 'Ailuropoda melanoleuca']\r\n",
+        "lista_3 = lista_1 + lista_2\r\n",
+        "print(lista_3)"
+      ],
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['Homo sapiens', 'Canis familiaris', 'Felis catus', 'Xenopus laevis', 'Ailuropoda melanoleuca']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e7AdJtx05RJV",
+        "outputId": "f479bbb8-f4b1-456f-ae77-982d21fb3026"
+      },
+      "source": [
+        "# é possível multiplicar ou replicar o conteúdo de uma lista\r\n",
+        "lista_2_2 = lista_2 * 2\r\n",
+        "print(lista_2_2)"
+      ],
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['Xenopus laevis', 'Ailuropoda melanoleuca', 'Xenopus laevis', 'Ailuropoda melanoleuca']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "1HIfDZVX5iS3",
+        "outputId": "e823c7d9-18ef-4cfc-f85a-6d1072298fdd"
+      },
+      "source": [
+        "# para visualizar apenas o elemento do indice 0\r\n",
+        "lista_1[0]"
+      ],
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Homo sapiens'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 160
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ymyUpOCX5w7X",
+        "outputId": "7442d035-8a1e-404d-ccf4-425571cbe352"
+      },
+      "source": [
+        "# para visualizar mais de um elemento na lista\r\n",
+        "lista_1[0:2] # lembrando que ele não traz o último!!!!!!!!!!!"
+      ],
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Homo sapiens', 'Canis familiaris']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 161
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vTt7xQT66B6S",
+        "outputId": "17ed6173-b2e7-4cfb-de8f-908a69db0523"
+      },
+      "source": [
+        "# adicionando itens na lista\r\n",
+        "lista_1.append('Gorila gorila')\r\n",
+        "print(lista_1)"
+      ],
+      "execution_count": 163,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['Homo sapiens', 'Canis familiaris', 'Felis catus', 'Gorila gorila', 'Gorila gorila']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mQpgKp-X5iHI",
+        "outputId": "c2febe9e-a2fe-4534-b083-448ff4c79d99"
+      },
+      "source": [
+        "# removendo algum item desta lista\r\n",
+        "lista_1.remove('Gorila gorila')\r\n",
+        "print(lista_1)"
+      ],
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['Homo sapiens', 'Canis familiaris', 'Felis catus', 'Gorila gorila']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v05PJL6g6X4G",
+        "outputId": "b2fe8829-8a9b-47f7-f26e-a40a899a2ce8"
+      },
+      "source": [
+        "# para deletar uma lista\r\n",
+        "del(lista_2)\r\n",
+        "print(lista_3)"
+      ],
+      "execution_count": 165,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['Homo sapiens', 'Canis familiaris', 'Felis catus', 'Xenopus laevis', 'Ailuropoda melanoleuca']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C6dHh9cf6msS",
+        "outputId": "e9d5d43f-dc5a-432a-a7cc-b5fba07ee4c7"
+      },
+      "source": [
+        "# para percorrer cada um dos elementos de uma lista, pode-se usar o FOR\r\n",
+        "for item in lista_2_2:\r\n",
+        "  print(item)"
+      ],
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Xenopus laevis\n",
+            "Ailuropoda melanoleuca\n",
+            "Xenopus laevis\n",
+            "Ailuropoda melanoleuca\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RmjcvlQ83aBz"
+      },
+      "source": [
+        "## 6.3 Dicionários"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0f20fOBR3rT3"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XgeFWXp83aJX"
+      },
+      "source": [
+        "## 6.4 Conjuntos (set)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XuUREJEi3r3u"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
